# rbac-linter

./: .gitignore  Cargo.toml  README.md  main.py  requirements.txt  role_analyzer.py  role_equivalence_check.py  role_query.py  test.py
.github/workflows/: ci.yml
blog/: z3-rbac.md
data/: admin.yml  nodes.yml  role.yml  role2.yml  roles.yml  users.yml
py/: README.md  main.py
src/: helpers.rs  main.rs
tests/: test_constraint_parsing.py  test_regex.py  test_role_equivalence.py  test_role_querying.py
tests/data/: role_equivalence_tests.yml  role_querying_tests.yml
