[package]
name = "rbac_linter"
version = "0.1.0"
authors = ["Andrew Helwer <ahelwer@disjunctive.llc>"]
description = "Teleport RBAC rule analysis using Z3"
repository = "https://github.com/ahelwer/teleport-z3"

[dependencies]
z3-sys = {version="0.7.1", features = ["static-link-z3"]}
serde = {version="1.0.130", features = ["derive"]}
serde_yaml = "0.8.21"
serde_with = "1.11.0"
